test/parsing/fail/parsing_error_class_name_lowercase.j
class a {
  Void main() { return 1; }
}
